src/components/Profile.css
.Profile {
	margin-left: auto;
	margin-right: auto;
}

#left-content {
	background-color: var(--jd-gray);
	color: rgba(10, 10, 10, 0.9);
	box-shadow: var(--menu-shadow);
	display:inline-block;
	margin: 20px;
	min-width: 500px;
	max-width: 500px;
	min-height: 250px;
	max-height: 100%;
	overflow-y: auto;
}

#profile-table-wrapper {
	max-height: 60vh;
	overflow-y: auto;
}

#left-content table {
	width: 100%;
	border-collapse: collapse;
	table-layout: fixed;
}

#map-search {
	width: 200px;
	background: transparent;
    padding: 10px;
    border: 1px solid #ccc;
    margin-bottom: 10px;
}

ul {
	list-style-type: none;
}

#right-content > h1 {
	text-align: center;
}

#profile-header, #user-info, #profile-content {
	padding: 10px;
}

#profile-header {
	text-align: center;
	font-size: 2em;
}

#profile-score-info td {
	padding: 5px;
}

td {
	text-align: center;
}

thead tr {
	background-color: var(--jd-gray) !important;
}

td {
	text-overflow: ellipsis;
    white-space: nowrap;
    overflow-x: hidden;
}

tr:nth-child(even) {
    background-color: #d1d2d2;
}

tr:nth-child(odd) {
    background-color: #dbdcdc;
}

#profile-score-info td:nth-child(2){
	max-width: 100px;
	max-height: 50px;
}

#profile-no-scores {
	color: grey;
	text-align: center;
}

#user-info-username, #user-info-email {
	display: inline-block;
	padding: 5px;
}

#user-info-username {
	margin-right: 30px;
}

#user-info-username-header, #user-info-username-icon {
	vertical-align: middle;
	display: inline;
}

#user-info-username-icon, #user-info-email-icon {
	vertical-align: middle;
	height: 24px;
  	line-height: 24px;
	margin: auto;
}

#user-info-username-header, #user-info-email-paragraph {
	padding-left: 10px;
}

#user-info-email-paragraph, #user-info-email-icon {
	display: inline;
}

